tests/snapshots/examples_fixtures/type_system__failing__196_effect_row_subtract_unresolved_single_e419.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/196_effect_row_subtract_unresolved_single_e419.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E419]: UNRESOLVED EFFECT VARIABLE

Cannot resolve effect variable `e` for this call.

  --> examples/type_system/failing/196_effect_row_subtract_unresolved_single_e419.flx:8:5
  |
8 |     unresolved(1)
  |     ^^^^^^^^^^
  |     ---------- effect variable is unconstrained

Hint:
  Add an explicit effect annotation (for example `with e`) or pass a callback with concrete effects.
== stdout ==
<not executed>
